Add functions GTN_FireModuleMagicGenerator