@@ -1,9 +1,21 @@
 package com.EvgenWarGold.GregTechNightmare.GregTech.MultiBlock.Generators.EV.Magen;
 
+import static com.EvgenWarGold.GregTechNightmare.GregTech.MultiBlock.MultiBlockClasses.GTN_HatchElement.AspectHatch;
+import static com.gtnewhorizon.gtnhlib.util.numberformatting.NumberFormatUtil.formatNumber;
+import static gregtech.api.enums.HatchElement.InputBus;
 import static gregtech.api.enums.HatchElement.InputHatch;
 
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+
+import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraft.item.ItemStack;
+import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.tileentity.TileEntity;
+import net.minecraft.util.EnumChatFormatting;
+import net.minecraft.world.World;
+import net.minecraftforge.fluids.FluidStack;
 
 import org.jetbrains.annotations.NotNull;
 
@@ -14,18 +26,78 @@ import com.EvgenWarGold.GregTechNightmare.GregTech.MultiBlock.MultiBlockClasses.
 import com.EvgenWarGold.GregTechNightmare.GregTech.MultiBlock.MultiBlockClasses.GTN_MultiBlockTooltipBuilder;
 import com.EvgenWarGold.GregTechNightmare.GregTech.MultiBlock.MultiBlockClasses.StructureVariant;
 import com.EvgenWarGold.GregTechNightmare.ModBlocks.ModBlocks;
+import com.EvgenWarGold.GregTechNightmare.ModItems.ModItems;
 import com.EvgenWarGold.GregTechNightmare.Utils.Authors;
 import com.gtnewhorizon.structurelib.structure.IStructureDefinition;
 
+import WayofTime.alchemicalWizardry.AlchemicalWizardry;
+import fox.spiteful.avaritia.compat.thaumcraft.Lucrum;
 import gregtech.api.enums.Materials;
+import gregtech.api.interfaces.tileentity.IGregTechTileEntity;
 import gregtech.api.recipe.check.CheckRecipeResult;
 import gregtech.api.recipe.check.CheckRecipeResultRegistry;
+import gtPlusPlus.core.material.MaterialsAlloy;
+import mcp.mobius.waila.api.IWailaConfigHandler;
+import mcp.mobius.waila.api.IWailaDataAccessor;
+import thaumcraft.api.aspects.Aspect;
 
 public class GTN_FireModuleMagicGenerator extends GTN_MultiBlockBase<GTN_FireModuleMagicGenerator>
     implements IMagicGeneratorModule {
 
-    private int generate = 100;
-    private int boostLevel = 0;
+    private int generate = 0;
+    private int boostLevel = 1;
+    private CatalystData catalystData;
+
+    private static final Map<Aspect, Integer> TIER_1 = new HashMap<>();
+    private static final Map<Aspect, Integer> TIER_2 = new HashMap<>();
+    private static final Map<Aspect, Integer> TIER_3 = new HashMap<>();
+    private static final Map<Aspect, Integer> TIER_4 = new HashMap<>();
+
+    private static final FluidStack LAVA;
+    private static final FluidStack INDALLOY_140;
+    private static final FluidStack BLOOD;
+
+    private static final int ASPECT_CONSUMPTION = 4;
+    private static final int LAVA_CONSUMPTION = 2_000;
+    private static final int INDALLOY_140_CONSUMPTION = 300;
+    private static final int BLOOD_CONSUMPTION = 15_000;
+
+    private static final ItemStack REINFORCED_SLATE = ModItems.BLOOD_MAGIC_ITEMS.ReinforcedSlate.get(1);
+    private static final ItemStack INCENDIUM = ModItems.BLOOD_MAGIC_ITEMS.Incendium.get(1);
+    private static final ItemStack OFFENSA = ModItems.BLOOD_MAGIC_ITEMS.Offensa.get(1);
+
+    private static final int REINFORCED_SLATE_CONSUMPTION = 128;
+    private static final int INCENDIUM_CONSUMPTION = 32;
+    private static final int OFFENSA_CONSUMPTION = 8;
+
+    private static final int CATALYST_BUFF_DURATION = 3_600;
+
+    private static final int TIER_1_GENERATE = 100_000;
+    private static final int TIER_2_GENERATE = 250_000;
+    private static final int TIER_3_GENERATE = 350_000;
+    private static final int TIER_4_GENERATE = 500_000;
+
+    private static final int VALID_DIMENSION = -1;
+
+    static {
+        TIER_1.put(Aspect.LIGHT, ASPECT_CONSUMPTION);
+
+        TIER_2.put(Aspect.LIGHT, ASPECT_CONSUMPTION);
+        TIER_2.put(Aspect.MIND, ASPECT_CONSUMPTION);
+
+        TIER_3.put(Aspect.LIGHT, ASPECT_CONSUMPTION);
+        TIER_3.put(Aspect.MIND, ASPECT_CONSUMPTION);
+        TIER_3.put(Aspect.HUNGER, ASPECT_CONSUMPTION);
+
+        TIER_4.put(Aspect.LIGHT, ASPECT_CONSUMPTION);
+        TIER_4.put(Aspect.MIND, ASPECT_CONSUMPTION);
+        TIER_4.put(Aspect.PLANT, ASPECT_CONSUMPTION);
+        TIER_4.put(Lucrum.ULTRA_DEATH, ASPECT_CONSUMPTION);
+
+        LAVA = Materials.Lava.getFluid(1);
+        INDALLOY_140 = MaterialsAlloy.INDALLOY_140.getFluidStack(1);
+        BLOOD = new FluidStack(AlchemicalWizardry.lifeEssenceFluid, 1);
+    }
 
     public GTN_FireModuleMagicGenerator(int id, String name) {
         super(id, name);
@@ -47,26 +119,26 @@ public class GTN_FireModuleMagicGenerator extends GTN_MultiBlockBase<GTN_FireMod
 
     @Override
     public List<StructureVariant<GTN_FireModuleMagicGenerator>> getStructureVariants() {
-        return Arrays.asList(
+        return List.of(
             new StructureVariant<>(
                 "FireModuleMagicGenerator",
                 // spotless:off
                 new String[][]{
-                    {"     CCC     ","   CCCCCCC   ","  CCCCCCCCC  "," CCCCCCCCCCC "," CCCCCCCCCCC ","CCCCCCCCCCCCC","CCCCCCCCCCCCC","CCCCCCCCCCCCC"," CCCCCCCCCCC "," CCCCCCCCCCC ","  CCCCCCCCC  ","   CCCCCCC   ","     CCC     "},
-                    {"     B       ","   B         ","             "," B           ","             ","             ","B     B      ","             ","             "," B         B ","             ","   B     B   ","      B      "},
-                    {"     B       ","   B         ","             "," B           ","             ","      B      ","B     F      ","      B      ","             "," B         D ","             ","   B     B   ","      B      "},
-                    {"     B       ","   B         ","             "," B           ","             ","             ","B    BFB     ","             ","             "," B           ","             ","   B     D   ","      B      "},
-                    {"     B       ","   B         ","             "," B           ","             ","             ","B     B      ","             ","             "," B         D ","             ","   B         ","      D      "},
-                    {"     B       ","   B         ","             "," B           ","             ","      B      ","B    BEB     ","      B      ","             "," B         B ","             ","   D     D   ","             "},
-                    {"     B       ","   B         ","             "," B           ","             ","      B      ","B    BE      ","      B      ","             "," D         B ","             ","         B   ","      D      "},
-                    {"     B       ","   B         ","             "," B           ","             ","     FEF     ","D    EEE     ","     FEF     ","             ","           B ","             ","   D     B   ","      B      "},
-                    {"     B       ","   B         ","             "," D           ","     FEF     ","    FAAAF    ","    EAAAE    ","    FAAAF    ","     FEF     "," D         B ","             ","   B     B   ","      B      "},
-                    {"     B       ","   D         ","             ","             ","     FEF     ","    FAAAF    ","D   EAAAE    ","    FAAAF    ","     FEF     "," B         B ","             ","   B     B   ","      B      "},
-                    {"     D       ","             ","             "," D           ","     FEF     ","    FAAAF    ","B   EAAAE    ","    FAAAF    ","     FEF     "," B         B ","             ","   B     B   ","      B      "},
-                    {"             ","   D         ","             "," B           ","             ","     FEF     ","B    EEE     ","     FEF     ","             "," B         B ","             ","   B     B   ","      B      "},
-                    {"     D       ","   B         ","             "," B           ","             ","             ","B            ","             ","             "," B         B ","             ","   B     B   ","      B      "},
-                    {"     B       ","   B         ","             "," B           ","             ","             ","B            ","             ","             "," B         B ","             ","   B     B   ","      B      "},
-                    {"     C~C     ","   CCCCCCC   ","  CCCCCCCCC  "," CCCCCCCCCCC "," CCCCCCCCCCC ","CCCCCCCCCCCCC","CCCCCCCCCCCCC","CCCCCCCCCCCCC"," CCCCCCCCCCC "," CCCCCCCCCCC ","  CCCCCCCCC  ","   CCCCCCC   ","     CCC     "}
+                    {"     CCC     ", "   CCCCCCC   ", "  CCCCCCCCC  ", " CCCCCCCCCCC ", " CCCCCCCCCCC ", "CCCCCCCCCCCCC", "CCCCCCCCCCCCC", "CCCCCCCCCCCCC", " CCCCCCCCCCC ", " CCCCCCCCCCC ", "  CCCCCCCCC  ", "   CCCCCCC   ", "     CCC     "},
+                    {"     B       ", "   B         ", "             ", " B           ", "             ", "             ", "B     B      ", "             ", "             ", " B         B ", "             ", "   B     B   ", "      B      "},
+                    {"     B       ", "   B         ", "             ", " B           ", "             ", "      B      ", "B     F      ", "      B      ", "             ", " B         D ", "             ", "   B     B   ", "      B      "},
+                    {"     B       ", "   B         ", "             ", " B           ", "             ", "             ", "B    BFB     ", "             ", "             ", " B           ", "             ", "   B     D   ", "      B      "},
+                    {"     B       ", "   B         ", "             ", " B           ", "             ", "             ", "B     B      ", "             ", "             ", " B         D ", "             ", "   B         ", "      D      "},
+                    {"     B       ", "   B         ", "             ", " B           ", "             ", "      B      ", "B    BEB     ", "      B      ", "             ", " B         B ", "             ", "   D     D   ", "             "},
+                    {"     B       ", "   B         ", "             ", " B           ", "             ", "      B      ", "B    BE      ", "      B      ", "             ", " D         B ", "             ", "         B   ", "      D      "},
+                    {"     B       ", "   B         ", "             ", " B           ", "             ", "     FEF     ", "D    EEE     ", "     FEF     ", "             ", "           B ", "             ", "   D     B   ", "      B      "},
+                    {"     B       ", "   B         ", "             ", " D           ", "     FEF     ", "    FAAAF    ", "    EAAAE    ", "    FAAAF    ", "     FEF     ", " D         B ", "             ", "   B     B   ", "      B      "},
+                    {"     B       ", "   D         ", "             ", "             ", "     FEF     ", "    FAAAF    ", "D   EAAAE    ", "    FAAAF    ", "     FEF     ", " B         B ", "             ", "   B     B   ", "      B      "},
+                    {"     D       ", "             ", "             ", " D           ", "     FEF     ", "    FAAAF    ", "B   EAAAE    ", "    FAAAF    ", "     FEF     ", " B         B ", "             ", "   B     B   ", "      B      "},
+                    {"             ", "   D         ", "             ", " B           ", "             ", "     FEF     ", "B    EEE     ", "     FEF     ", "             ", " B         B ", "             ", "   B     B   ", "      B      "},
+                    {"     D       ", "   B         ", "             ", " B           ", "             ", "             ", "B            ", "             ", "             ", " B         B ", "             ", "   B     B   ", "      B      "},
+                    {"     B       ", "   B         ", "             ", " B           ", "             ", "             ", "B            ", "             ", "             ", " B         B ", "             ", "   B     B   ", "      B      "},
+                    {"     C~C     ", "   CCCCCCC   ", "  CCCCCCCCC  ", " CCCCCCCCCCC ", " CCCCCCCCCCC ", "CCCCCCCCCCCCC", "CCCCCCCCCCCCC", "CCCCCCCCCCCCC", " CCCCCCCCCCC ", " CCCCCCCCCCC ", "  CCCCCCCCC  ", "   CCCCCCC   ", "     CCC     "}
                 },
                 //spotless:on
                 new MultiblockOffsets(6, 14, 0),
@@ -82,7 +154,9 @@ public class GTN_FireModuleMagicGenerator extends GTN_MultiBlockBase<GTN_FireMod
 
     @Override
     public void createGtnTooltip(GTN_MultiBlockTooltipBuilder builder) {
-
+        builder.addInputBus()
+            .addInputHatch()
+            .addAspectHatch();
     }
 
     @Override
@@ -93,7 +167,7 @@ public class GTN_FireModuleMagicGenerator extends GTN_MultiBlockBase<GTN_FireMod
     @Override
     public IStructureDefinition<GTN_FireModuleMagicGenerator> getStructureDefinition() {
         return buildStructureDefinition(
-            builder -> builder.addMainCasing('C', b -> b.hatches(InputHatch))
+            builder -> builder.addMainCasing('C', b -> b.hatches(InputHatch, AspectHatch, InputBus))
                 .addCasing('A', GTN_Casings.HSSGCoilBlock)
                 .addFrame('B', Materials.TungstenSteel)
                 .addBlock('D', ModBlocks.THAUMCRAFT_BLOCKS.AmberBlock.getBlock(), 0)
@@ -106,8 +180,68 @@ public class GTN_FireModuleMagicGenerator extends GTN_MultiBlockBase<GTN_FireMod
 
     @Override
     public @NotNull CheckRecipeResult checkProcessing() {
-        setDurationInSeconds(5);
-        return CheckRecipeResultRegistry.SUCCESSFUL;
+        IGregTechTileEntity gte = this.getBaseMetaTileEntity();
+        if (gte != null) {
+            World world = gte.getWorld();
+            if (world != null && world.provider.dimensionId != VALID_DIMENSION) {
+                return CheckRecipeResultRegistry.NO_RECIPE;
+            }
+        }
+
+        generate = 0;
+        boostLevel = 1;
+        double catalystBuff = 1;
+
+        if (catalystData == null) {
+            if (consumeItemFromHatches(OFFENSA, OFFENSA_CONSUMPTION, true)) {
+                consumeItemFromHatches(OFFENSA, OFFENSA_CONSUMPTION, false);
+                catalystData = new CatalystData(CATALYST_BUFF_DURATION, 0.25);
+            } else if (consumeItemFromHatches(INCENDIUM, INCENDIUM_CONSUMPTION, true)) {
+                consumeItemFromHatches(INCENDIUM, INCENDIUM_CONSUMPTION, false);
+                catalystData = new CatalystData(CATALYST_BUFF_DURATION, 0.5);
+            } else if (consumeItemFromHatches(REINFORCED_SLATE, REINFORCED_SLATE_CONSUMPTION, true)) {
+                consumeItemFromHatches(REINFORCED_SLATE, REINFORCED_SLATE_CONSUMPTION, false);
+                catalystData = new CatalystData(CATALYST_BUFF_DURATION, 0.75);
+            }
+        }
+
+        if (consumeAspectFromHatches(TIER_4, true)) {
+            consumeAspectFromHatches(TIER_4, false);
+            generate = TIER_4_GENERATE;
+        } else if (consumeAspectFromHatches(TIER_3, true)) {
+            consumeAspectFromHatches(TIER_3, false);
+            generate = TIER_3_GENERATE;
+        } else if (consumeAspectFromHatches(TIER_2, true)) {
+            consumeAspectFromHatches(TIER_2, false);
+            generate = TIER_2_GENERATE;
+        } else if (consumeAspectFromHatches(TIER_1, true)) {
+            consumeAspectFromHatches(TIER_1, false);
+            generate = TIER_1_GENERATE;
+        }
+
+        if (catalystData != null && catalystData.getDuration() != 0) {
+            catalystBuff = catalystData.getBoost();
+        }
+
+        if (consumeFluidFromHatches(BLOOD, (int) (BLOOD_CONSUMPTION * catalystBuff), true)) {
+            consumeFluidFromHatches(BLOOD, (int) (BLOOD_CONSUMPTION * catalystBuff), false);
+            boostLevel = 4;
+        } else if (consumeFluidFromHatches(INDALLOY_140, (int) (INDALLOY_140_CONSUMPTION * catalystBuff), true)) {
+            consumeFluidFromHatches(INDALLOY_140, (int) (INDALLOY_140_CONSUMPTION * catalystBuff), false);
+            boostLevel = 3;
+        } else if (consumeFluidFromHatches(LAVA, (int) (LAVA_CONSUMPTION * catalystBuff), true)) {
+            consumeFluidFromHatches(LAVA, (int) (LAVA_CONSUMPTION * catalystBuff), false);
+            boostLevel = 2;
+        }
+
+        generate *= boostLevel;
+
+        if (generate > 0) {
+            setDurationInSeconds(1);
+            return CheckRecipeResultRegistry.SUCCESSFUL;
+        }
+
+        return CheckRecipeResultRegistry.NO_RECIPE;
     }
 
     @Override
@@ -118,5 +252,64 @@ public class GTN_FireModuleMagicGenerator extends GTN_MultiBlockBase<GTN_FireMod
     @Override
     public boolean isEnergyMultiBlock() {
         return false;
+    }
+
+    @Override
+    public void getWailaBody(ItemStack itemStack, List<String> currentTip, IWailaDataAccessor accessor,
+        IWailaConfigHandler config) {
+        super.getWailaBody(itemStack, currentTip, accessor, config);
+
+        NBTTagCompound tag = accessor.getNBTData();
+
+        currentTip.add(
+            EnumChatFormatting.GREEN + "Generate: "
+                + EnumChatFormatting.AQUA
+                + formatNumber(tag.getInteger("generate")));
+        currentTip.add(
+            EnumChatFormatting.GREEN + "Catalyst duration: "
+                + EnumChatFormatting.AQUA
+                + formatNumber(tag.getInteger("catalyst")));
+    }
+
+    @Override
+    public void getWailaNBTData(EntityPlayerMP player, TileEntity tile, NBTTagCompound tag, World world, int x, int y,
+        int z) {
+        super.getWailaNBTData(player, tile, tag, world, x, y, z);
+
+        tag.setInteger("generate", generate);
+
+        if (catalystData != null) {
+            tag.setInteger("catalyst", catalystData.getDuration());
+        }
+    }
+
+    @Override
+    public void onPostTick(IGregTechTileEntity aBaseMetaTileEntity, long aTimer) {
+        super.onPostTick(aBaseMetaTileEntity, aTimer);
+        if (aBaseMetaTileEntity.isServerSide()) {
+            if (aTimer % 20 == 0) {
+                if (catalystData != null) {
+                    catalystData.decreaseDuration();
+
+                    if (catalystData.getDuration() <= 0) {
+                        catalystData = null;
+                    }
+                }
+            }
+        }
+    }
+
+    @Override
+    public void saveNBTData(NBTTagCompound aNBT) {
+        super.saveNBTData(aNBT);
+        if (catalystData != null) {
+            catalystData.writeToNBT(aNBT);
+        }
+    }
+
+    @Override
+    public void loadNBTData(NBTTagCompound aNBT) {
+        super.loadNBTData(aNBT);
+        catalystData = CatalystData.readFromNBT(aNBT);
     }
 }
